# BAGS-python

./: .gitignore  CLAUDE.md  README.md  example.ipynb  pyproject.toml
bags/: __init__.py  constants.py  data.py  grain_size.py  hydraulics.py  io.py
bags/equations/: __init__.py  bakke99.py  parker82.py  parker90.py  wilcock01.py  wilcock03.py
src_VBA/: BAGS0000Note.bas  BAGSModule1.bas  BAGSModule2.bas  BAGSModule3.bas  BAGSgRAPH.bas  PK82Bakke99Module.bas  PKM82D50Module.bas  Parker90Module.bas  Sheet1.bas  Sheet2.bas  Sheet3.bas  Sheet4.bas  Sheet5.bas  Sheet8.bas  ThisWorkbook.bas  Wilcock01Module.bas  Wilcock03Module.bas  ufAvailableInput.bas  ufAvailableInput.xdl  ufDischarge.bas  ufDischarge.xdl  ufEquations.bas  ufEquations.xdl  ufFractions.bas  ufFractions.xdl  ufManning.bas  ufManning.xdl  ufMinMaxDischarge.bas  ufMinMaxDischarge.xdl  ufMyMsgBox.bas  ufMyMsgBox.xdl  ufProject.bas  ufProject.xdl  ufQuestions.bas  ufQuestions.xdl  ufSingleDischarge.bas  ufSingleDischarge.xdl  ufSlope.bas  ufSlope.xdl  ufSplashScreen.bas  (+1 more)
